--- a/singolo1.html
+++ b/singolo1.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Singolo site</title>
+        <title>Singolo</title>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="singolo1.css">
     </head>
     <body>
@@ -19,66 +20,64 @@
             </nav>
         </header>
         <main class="container">
-            <div class="slider wrapper">
+            <section class="slider wrapper">
                 <div class="slide-control"><a class="slide-left" href="#"></a></div>
                 <div class="slider-content">
                     <div class="iphone iphone-vertical"><div class="iphone-vertical-screen"></div></div>
                     <div class="iphone iphone-horizontal"><div class="iphone-horizontal-screen"></div></div>
                 </div>
                 <div class="slide-control"><a class="slide-right" href="#"></a></div>
-            </div>
-        </main>
-        <footer class="footer">
-            <div class="wrapper">
-                <div class="footer-title">
-                    <div class="footer-title-header">Our Services</div>
-                    <div class="footer-title-content">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</div>
+            </section>
+            <section class="content wrapper">
+                <div class="content-title">
+                    <div class="content-title-header">Our Services</div>
+                    <div class="content-title-description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</div>
                 </div>
-                <div class="footer-content">
-                    <div class="footer-block">
+                <div class="content-description">
+                    <div class="content-block">
                         <div class="block-image block-image-pen"></div>
-                        <div class="block-description">
+                        <div class="block-content">
                             <div class="block-header">Custom design</div>
-                            <div class="block-content">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</div>
+                            <div class="block-description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</div>
                         </div>
                     </div>
-                    <div class="footer-block">
+                    <div class="content-block">
                         <div class="block-image block-image-bulb"></div>
-                        <div class="block-description">
+                        <div class="block-content">
                             <div class="block-header">Inovative ideas</div>
-                            <div class="block-content">Quisque luctus, quam eget molestie com&shy;modo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</div>
+                            <div class="block-description">Quisque luctus, quam eget molestie com&shy;modo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</div>
                         </div>
                     </div>
-                    <div class="footer-block">
+                    <div class="content-block">
                         <div class="block-image block-image-heart"></div>
-                        <div class="block-description">
+                        <div class="block-content">
                             <div class="block-header">Love is the answer</div>
-                            <div class="block-content">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</div>
+                            <div class="block-description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</div>
                         </div>
                     </div>
-                    <div class="footer-block">
+                    <div class="content-block">
                         <div class="block-image block-image-phone"></div>
-                        <div class="block-description">
+                        <div class="block-content">
                             <div class="block-header">Responsive layout</div>
-                            <div class="block-content">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae&shy;sent elit leo.</div>
+                            <div class="block-description">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae&shy;sent elit leo.</div>
                         </div>
                     </div>
-                    <div class="footer-block">
+                    <div class="content-block">
                         <div class="block-image block-image-bubble"></div>
-                        <div class="block-description">
+                        <div class="block-content">
                             <div class="block-header">24 / 7 support</div>
-                            <div class="block-content">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen&shy;tesque egestas venenatis lorem .</div>
+                            <div class="block-description">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen&shy;tesque egestas venenatis lorem .</div>
                         </div>
                     </div>
-                    <div class="footer-block">
+                    <div class="content-block">
                         <div class="block-image block-image-star"></div>
-                        <div class="block-description">
+                        <div class="block-content">
                             <div class="block-header">Feel like a star</div>
-                            <div class="block-content">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</div>
+                            <div class="block-description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </footer>
+            </section>
+        </main>
     </body>
 </html>
