--- a/index.html
+++ b/index.html
@@ -7,94 +7,104 @@
         <title>Singolo</title>
     </head>
     <body>
-        <header class="header wrapper">
-            <h1 class="logo">singolo</h1>
-            <nav class="nav">
+        <header class="section header">
+            <h1 class="header__logo">singolo</h1>
+            <nav class="header__navigation">
                 <ul>
-                    <li class="nav-item"><a href="#">home</a></li>
-                    <li class="nav-item"><a href="#services">services</a></li>
-                    <li class="nav-item"><a href="#portfolio">portfolio</a></li>
-                    <li class="nav-item"><a href="#about-us">about</a></li>
-                    <li class="nav-item"><a href="#get-a-quote">contact</a></li>
+                    <li class="header__navigation__item"><a href="#">home</a></li>
+                    <li class="header__navigation__item"><a href="#services">services</a></li>
+                    <li class="header__navigation__item"><a href="#portfolio">portfolio</a></li>
+                    <li class="header__navigation__item"><a href="#about-us">about</a></li>
+                    <li class="header__navigation__item"><a href="#get-a-quote">contact</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <section class="slider wrapper">
-                <div class="slide-control"><a class="slide-left" href="#"></a></div>
-                <div class="slider-content">
-                    <div class="iphone iphone-vertical"><div class="iphone-vertical-screen"></div></div>
-                    <div class="iphone iphone-horizontal"><div class="iphone-horizontal-screen"></div></div>
+            <section class="section section_slider">
+                <div class="section__content slider">
+                    <a href="#" class="slider__control slider__control_left"></a>
+                    <div class="slider__content">
+                        <div class="iphone iphone-vertical">
+                            <div class="iphone__frame"></div>
+                            <div class="iphone__screen iphone__screen_yellow"></div>
+                            <div class="iphone__shadow"></div>
+                        </div>
+                        <div class="iphone iphone-horizontal">
+                            <div class="iphone__frame"></div>
+                            <div class="iphone__screen iphone__screen_blue"></div>
+                            <div class="iphone__shadow"></div>
+                        </div>
+                    </div>
+                    <div class="slider__control slider__control_right"><a href="#"></a></div>
                 </div>
-                <div class="slide-control"><a class="slide-right" href="#"></a></div>
             </section>
-            <section class="content wrapper" id="services">
-                <div class="content-title">
-                    <div class="content-title-header">Our Services</div>
-                    <div class="content-title-description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</div>
+            <section class="section section_services" id="services">
+                <div class="section__header">
+                    <h2 class="section__header__title">Our Services</h2>
+                    <div class="section__header__description">
+                        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+                    </div>
                 </div>
-                <div class="content-description">
-                    <div class="content-block">
-                        <div class="block-image block-image-pen"></div>
-                        <div class="block-content">
-                            <div class="block-header">Custom design</div>
-                            <div class="block-description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</div>
+                <div class="section__content layout-3-column">
+                    <div class="service-info">
+                        <div class="service-info__image service-info__image_pen"></div>
+                        <div class="service-info__content info-block">
+                            <div class="info-block__header">Custom design</div>
+                            <div class="info-block__description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</div>
                         </div>
                     </div>
-                    <div class="content-block">
-                        <div class="block-image block-image-bulb"></div>
-                        <div class="block-content">
-                            <div class="block-header">Inovative ideas</div>
-                            <div class="block-description">Quisque luctus, quam eget molestie com&shy;modo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</div>
+                    <div class="service-info">
+                        <div class="service-info__image service-info__image_bulb"></div>
+                        <div class="service-info__content info-block">
+                            <div class="info-block__header">Inovative ideas</div>
+                            <div class="info-block__description">Quisque luctus, quam eget molestie com&shy;modo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</div>
                         </div>
                     </div>
-                    <div class="content-block">
-                        <div class="block-image block-image-heart"></div>
-                        <div class="block-content">
-                            <div class="block-header">Love is the answer</div>
-                            <div class="block-description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</div>
+                    <div class="service-info">
+                        <div class="service-info__image service-info__image_heart"></div>
+                        <div class="service-info__content info-block">
+                            <div class="info-block__header">Love is the answer</div>
+                            <div class="info-block__description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</div>
                         </div>
                     </div>
-                    <div class="content-block">
-                        <div class="block-image block-image-phone"></div>
-                        <div class="block-content">
-                            <div class="block-header">Responsive layout</div>
-                            <div class="block-description">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae&shy;sent elit leo.</div>
+                    <div class="service-info">
+                        <div class="service-info__image service-info__image_phone"></div>
+                        <div class="service-info__content info-block">
+                            <div class="info-block__header">Responsive layout</div>
+                            <div class="info-block__description">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae&shy;sent elit leo.</div>
                         </div>
                     </div>
-                    <div class="content-block">
-                        <div class="block-image block-image-bubble"></div>
-                        <div class="block-content">
-                            <div class="block-header">24 / 7 support</div>
-                            <div class="block-description">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen&shy;tesque egestas venenatis lorem .</div>
+                    <div class="service-info">
+                        <div class="service-info__image service-info__image_bubble"></div>
+                        <div class="service-info__content info-block">
+                            <div class="info-block__header">24 / 7 support</div>
+                            <div class="info-block__description">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen&shy;tesque egestas venenatis lorem .</div>
                         </div>
                     </div>
-                    <div class="content-block">
-                        <div class="block-image block-image-star"></div>
-                        <div class="block-content">
-                            <div class="block-header">Feel like a star</div>
-                            <div class="block-description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</div>
+                    <div class="service-info">
+                        <div class="service-info__image service-info__image_star"></div>
+                        <div class="service-info__content info-block">
+                            <div class="info-block__header">Feel like a star</div>
+                            <div class="info-block__description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</div>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="section section_portfolio" id="portfolio">
                 <div class="section__header">
-                    <h2 class="section__header__title">
-                        Portfolio
-                    </h2>
+                    <h2 class="section__header__title">Portfolio</h2>
                     <div class="section__header__description">
                         Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
                     </div>
                 </div>
-                <div class="section__content gallery layout-4-column">
+                <div class="section__content gallery">
                     <div class="gallery__filter">
-                        <button class="gallery__filter__button filter__button_active">all</button>
+                        <button class="gallery__filter__button gallery__filter__button_active">all</button>
                         <button class="gallery__filter__button">web design</button>
                         <button class="gallery__filter__button">graphic design</button>
                         <button class="gallery__filter__button">artwork</button>
                     </div>
-<!--                     <div class="gallery__content"> -->
+                    <div class="gallery__content layout-4-column">
                         <div class="gallery__item gallery__item_project1"></div>
                         <div class="gallery__item gallery__item_project2"></div>
                         <div class="gallery__item gallery__item_project3"></div>
@@ -107,7 +117,7 @@
                         <div class="gallery__item gallery__item_project10"></div>
                         <div class="gallery__item gallery__item_project11"></div>
                         <div class="gallery__item gallery__item_project12"></div>
-                    <!-- </div> -->
+                    </div>
                 </div>
             </section>
             <section class="section section_about" id="about-us">
@@ -119,38 +129,40 @@
                         Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
                     </div>
                 </div>
-                <div class="section__content layout-3-column">
-                    <div class="about__item">
-                        <div class="about__item__photo about__item__photo_person1"></div>
-                        <div class="about__item__name">Adam Jensen</div>
-                        <div class="about__item__summary">Quisque luctus, quam eget molestie commodo, lacus purus <span>cursus purus, nec rutrum tellus dolor id lorem.</span></div>
-                        <div class="about__item__contact social-contact">
-                            <a class="social-contact__item social-contact__item_facebook" href="#"></a>
-                            <a class="social-contact__item social-contact__item_google" href="#"></a>
-                            <a class="social-contact__item social-contact__item_twitter" href="#"></a>
-                            <a class="social-contact__item social-contact__item_linkedin" href="#"></a>
+                <div class="section__content">
+                    <div class="about layout-3-column">
+                        <div class="about__item">
+                            <div class="about__item__photo about__item__photo_person1"></div>
+                            <div class="about__item__name">Adam Jensen</div>
+                            <div class="about__item__summary">Quisque luctus, quam eget molestie commodo, lacus purus <span>cursus purus, nec rutrum tellus dolor id lorem.</span></div>
+                            <div class="about__item__contact social-contact">
+                                <a class="social-contact__item social-contact__item_facebook" href="#"></a>
+                                <a class="social-contact__item social-contact__item_google" href="#"></a>
+                                <a class="social-contact__item social-contact__item_twitter" href="#"></a>
+                                <a class="social-contact__item social-contact__item_linkedin" href="#"></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="about__item">
-                        <div class="about__item__photo about__item__photo_person2"></div>
-                        <div class="about__item__name">Desmond Miles</div>
-                        <div class="about__item__summary">Curabitur vestibulum eget mauris quis laoreet. Phasellus <span>in quam laoreet, viverra lacus ut, ultrices velit.</span></div>
-                        <div class="about__item__contact social-contact">
-                            <a class="social-contact__item social-contact__item_facebook" href="#"></a>
-                            <a class="social-contact__item social-contact__item_google" href="#"></a>
-                            <a class="social-contact__item social-contact__item_twitter" href="#"></a>
-                            <a class="social-contact__item social-contact__item_linkedin" href="#"></a>
+                        <div class="about__item">
+                            <div class="about__item__photo about__item__photo_person2"></div>
+                            <div class="about__item__name">Desmond Miles</div>
+                            <div class="about__item__summary">Curabitur vestibulum eget mauris quis laoreet. Phasellus <span>in quam laoreet, viverra lacus ut, ultrices velit.</span></div>
+                            <div class="about__item__contact social-contact">
+                                <a class="social-contact__item social-contact__item_facebook" href="#"></a>
+                                <a class="social-contact__item social-contact__item_google" href="#"></a>
+                                <a class="social-contact__item social-contact__item_twitter" href="#"></a>
+                                <a class="social-contact__item social-contact__item_linkedin" href="#"></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="about__item">
-                        <div class="about__item__photo about__item__photo_person3"></div>
-                        <div class="about__item__name">Scolara Visari</div>
-                        <div class="about__item__summary">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet <span>turpis, et consequat felis. Quisque condimentum.</span></div>
-                        <div class="about__item__contact social-contact">
-                            <a class="social-contact__item social-contact__item_facebook" href="#"></a>
-                            <a class="social-contact__item social-contact__item_google" href="#"></a>
-                            <a class="social-contact__item social-contact__item_twitter" href="#"></a>
-                            <a class="social-contact__item social-contact__item_linkedin" href="#"></a>
+                        <div class="about__item">
+                            <div class="about__item__photo about__item__photo_person3"></div>
+                            <div class="about__item__name">Scolara Visari</div>
+                            <div class="about__item__summary">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet <span>turpis, et consequat felis. Quisque condimentum.</span></div>
+                            <div class="about__item__contact social-contact">
+                                <a class="social-contact__item social-contact__item_facebook" href="#"></a>
+                                <a class="social-contact__item social-contact__item_google" href="#"></a>
+                                <a class="social-contact__item social-contact__item_twitter" href="#"></a>
+                                <a class="social-contact__item social-contact__item_linkedin" href="#"></a>
+                            </div>
                         </div>
                     </div>
                 </div>
