fix: correct padding fix: add overflow: hidden to text blocks

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <input type="email" name="email" id="email" placeholder="Email (Required)" class="get-a-quote-form__field" required>
                         <input type="text" name="subject" id="subject" placeholder="Subject" class="get-a-quote-form__field">
                         <textarea name="description" id="description" placeholder="Describe your project in detail..." class="get-a-quote-form__field get-a-quote-form__field_textarea"></textarea>
-                        <input type="submit" value="Send" class="get-a-quote-form__field get-a-quote-form__field_submit">
+                        <input type="submit" value="Submit" class="get-a-quote-form__field get-a-quote-form__field_submit">
                     </form>
                     <div class="contact-info">
                         <div class="contact-info__header">Contact Information</div>
