fix: repair W3C validation errors

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <div class="contact-info__description">Quisque hendrerit purus dapibus, ornare nibh vitae, viver&shy;ra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.</div>
                         <div class="contact-info__footer">
                             <div class="contact-info__footer__item contact-info__footer__item_address">Elm St. 14/05 Lost City</div>
-                            <a href="tel:03528 331 86 35" class="contact-info__footer__item contact-info__footer__item_phone">03528 331 86 35</a>
+                            <a href="tel:035283318635" class="contact-info__footer__item contact-info__footer__item_phone">03528 331 86 35</a>
                             <a href="mailto:info@singolo.com" class="contact-info__footer__item contact-info__footer__item_email">info@singolo.com</a>
                         </div>
                     </div>
@@ -205,6 +205,5 @@
                 <a class="social-contact__item social-contact__item_linkedin" href="#"></a>
             </div>
         </footer>
-        </main>
     </body>
 </html>
