fix: moved to animation instead of transition fix: cleanup styles and js

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <main>
             <section class="section section_slider" id="home">
                 <div class="section__content slider">
-                    <a href="#" class="slider__control slider__control_left"></a>
                     <div class="slider__content">
                         <div class="slide slide_1 slide_active">
                             <div class="iphone iphone-vertical">
@@ -44,7 +43,8 @@
                             <div class="iphone iphone-vertical-slide-2"></div>
                         </div>
                     </div>
-                    <div class="slider__control slider__control_right"><a href="#"></a></div>
+                    <a href="#" class="slider__control slider__control_left"></a>
+                    <a href="#" class="slider__control slider__control_right"></a>
                 </div>
             </section>
             <section class="section section_services" id="services">
