--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1 class="header__logo">singolo</h1>
             <nav class="header__navigation">
                 <ul>
-                    <li class="header__navigation__item"><a href="#home">home</a></li>
+                    <li class="header__navigation__item header__navigation__item_active"><a href="#home">home</a></li>
                     <li class="header__navigation__item"><a href="#services">services</a></li>
                     <li class="header__navigation__item"><a href="#portfolio">portfolio</a></li>
                     <li class="header__navigation__item"><a href="#about-us">about</a></li>
