fix: limit modal window field sizes fix: add cursor: pointer to phone buttons

--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                     <form action="#" method="GET" class="get-a-quote-form" autocomplete="off">
                         <input type="text" name="name" id="name" placeholder="Name (Required)" class="get-a-quote-form__field" required>
                         <input type="email" name="email" id="email" placeholder="Email (Required)" class="get-a-quote-form__field" required>
-                        <input type="text" name="subject" id="subject" placeholder="Subject" class="get-a-quote-form__field">
-                        <textarea name="description" id="description" placeholder="Describe your portfolio- in detail..." class="get-a-quote-form__field get-a-quote-form__field_textarea"></textarea>
+                        <input type="text" maxlength="200" name="subject" id="subject" placeholder="Subject" class="get-a-quote-form__field">
+                        <textarea name="description" maxlength="2000" id="description" placeholder="Describe your portfolio- in detail..." class="get-a-quote-form__field get-a-quote-form__field_textarea"></textarea>
                         <input type="submit" value="Submit" class="get-a-quote-form__field get-a-quote-form__field_submit">
                     </form>
                     <div class="contact-info">
